--- a/Temporizador/Temporizador.csproj
+++ b/Temporizador/Temporizador.csproj
@@ -86,6 +86,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="font\digital-7 %28mono%29.ttf" />
+    <None Include="font\digital-7%28mono%29.ttf" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
